# ACESim

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  Doxyfile  NOTICE  README.en.md  README.md  pyproject.toml  requirements.txt  setup.py
acesim/benchmark/: base_benchmark.py  x500_arm2x_velocity.py
acesim/config/: advanced_plane.toml  asset_params.py  config_loader.py  default.toml  plane.toml  standard_vtol.toml  uuv_bluerov2_heavy.toml
acesim/core/: benchmark.py  play.py
acesim/deploy/aircraft/acesim_ros2/: package.xml  setup.cfg  setup.py
acesim/deploy/aircraft/acesim_ros2/acesim_ros2/: ace_follower.py  acesim_bridge.py  acesim_play.py  acesim_play_headless.py  acesim_play_ue.py  arm_state_zmq_bridge.py  launch_common.py  px4_post_start_setup.py  simulation_clock_zmq_bridge.py  zmq_endpoints.py
acesim/deploy/aircraft/acesim_ros2/acesim_ros2/benchmark/: __init__.py  x500_arm2x.py
acesim/deploy/aircraft/acesim_ros2/acesim_ros2/bridge/: __init__.py  config.py  plugin_api.py  registry.py  runtime.py
acesim/deploy/aircraft/acesim_ros2/acesim_ros2/bridge/plugins/: __init__.py  arm_command_px4.py  arm_command_ros.py  arm_state.py  px4_controls.py  simulation_clock.py  vehicle_truth.py
acesim/deploy/aircraft/acesim_ros2/config/: bridges.yaml  x500_arm2x_benchmark.yaml
acesim/deploy/aircraft/acesim_ros2/launch/: linux.launch.py  linux_headless.launch.py  linux_ue.launch.py  wsl.launch.py  x500_arm2x_benchmark.launch.py
acesim/deploy/aircraft/acesim_ros2/resource/: acesim_ros2
acesim/deploy/aircraft/px4_sim_ros2/: package.xml  setup.cfg  setup.py
acesim/deploy/aircraft/px4_sim_ros2/config/: px4_sim_config.yaml
acesim/deploy/aircraft/px4_sim_ros2/launch/: linux.launch.py  windows.launch.py  wsl.launch.py
acesim/deploy/aircraft/px4_sim_ros2/px4_sim_ros2/: clock_zmq_bridge.py
acesim/deploy/aircraft/px4_sim_ros2/resource/: px4_sim_ros2
acesim/env/: base_env.py
acesim/sitl/: __init__.py  __main__.py  cli.py  play.py  process.py  px4_bootstrap.py  (+3 more)
scripts/: black_each_file.py  check_commit_msg.py
tests/: ros2_bridge_testbed.py  test_ace_follower_ros2.py  test_acesim_bridge.py  test_acesim_play_headless.py  test_acesim_play_ue.py  test_arm_command_publisher.py  test_arm_servo_scheduler.py  test_asset_tool_tuis.py  test_bridge_config_loader.py  test_bridge_plugin_registry.py  test_bridge_plugins.py  test_bridge_runtime.py  test_config_loader.py  test_conventional_commit.py  test_dynamics_utils.py  test_mc_arm_env_command_publishing.py  test_mujoco_headless_startup.py  test_mujoco_vehicle_dynamics.py  test_packaging_metadata.py  test_px4_arm_split_static.py  test_px4_post_start_setup.py  test_px4_sdf_asset_pipeline.py  test_px4_sdf_asset_pipeline_geometry.py  test_px4_sdf_asset_pipeline_inertia.py  test_px4_sdf_asset_pipeline_runtime.py  test_px4_sdf_asset_pipeline_structure.py  test_px4_transport_scheduler.py  test_render_readme_assets.py  test_ros2_launch_common.py  test_ros2_linux_launch.py  test_sdf2urdf.py  test_sim_streams.py  test_simulation_clock.py  test_sitl_core.py  test_ue5_airport_assets.py  test_ue5_host_check.py  test_ue5_mjcf_asset_export.py  test_ue5_process_cleanup.py  test_ue5_project_scaffold.py  test_ue5_visual_stream_tool.py  (+7 more)
(+270 files in other folders)
