[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acesim"
version = "0.1.0"
description = "PX4 + MuJoCo simulation toolkit split from ACETele."
readme = "README.md"
authors = [
    { name = "Xiangyuan Xie", email = "dragonboat_xxy@163.com" },
]
keywords = ["python", "px4", "mujoco", "simulation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "mujoco",
    "genesis-world",
    "numpy",
    "scipy",
    "tqdm",
    "pymavlink",
    "pyzmq",
]

[tool.setuptools.packages.find]
where = ["."]
