[build-system]
requires = ["setuptools>=59.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acesim"
version = "0.1.0"
description = "PX4 + MuJoCo simulation toolkit split from ACETele."
readme = "README.md"
authors = [
    { name = "Xiangyuan Xie", email = "dragonboat_xxy@163.com" },
]
keywords = ["python", "px4", "mujoco", "simulation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "pymavlink",
    "pyzmq",
]

[project.optional-dependencies]
mujoco = [
    "mujoco",
    "trimesh",
]
genesis = [
    "genesis-world",
]
all = [
    "mujoco",
    "genesis-world",
    "trimesh",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["acesim", "acesim.*"]
exclude = ["acesim.third_party", "acesim.third_party.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
