<?xml version="1.0"?>
<package format="3">
  <name>px4_sim_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 utilities for PX4 HIL simulation in ACETele</description>
  <maintainer email="dragonboat_xxy@163.com">Xiangyuan Xie</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rosgraph_msgs</depend>
  <exec_depend>python3-zmq</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
